--- a/Experiment/config/prometheus_control_config/px4_sender.yaml
+++ b/Experiment/config/prometheus_control_config/px4_sender.yaml
@@ -1,10 +1,10 @@
 ## parameter for px4_sender.cpp
 
 ## 起飞高度,建议设置小一点
-## 2020.11.04测试发现飞机起飞有较大超调，未发现原因，但起飞后控制正常
 Takeoff_height : 0.5
 ## 降落速度
 Land_speed : 0.2
+Land_mode : 0 
 ##　上锁高度
 Disarm_height : 0.25
 
