change to solo model

--- a/Simulator/gazebo_simulator/amov_models/cxy_solo/model.config
+++ b/Simulator/gazebo_simulator/amov_models/cxy_solo/model.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <model>
-  <name>amov_solo</name>
+  <name>cxy_solo</name>
   <version>1.0</version>
-  <sdf version='1.5'>amov_solo.sdf</sdf>
+  <sdf version='1.5'>cxy_solo.sdf</sdf>
 
   <author>
    <name>Qi Yuhua</name>
